# reinforcement

./: .gitignore  Cargo.toml  README.md  index.html  plot  reinforcement-5faf610cc678fb83_bg.wasm  trunk.toml  ttt
assets/: manifest.json
docs/: index.html  reinforcement-214e5ab34a6c69e6.js  reinforcement-214e5ab34a6c69e6_bg.wasm  reinforcement-30d3ec9cf64e24be.js  reinforcement-30d3ec9cf64e24be_bg.wasm  reinforcement-39ba905dcff5c992.js  reinforcement-39ba905dcff5c992_bg.wasm  reinforcement-3ded42e26e565306.js  reinforcement-3ded42e26e565306_bg.wasm  reinforcement-6bb475821907a1f1.js  reinforcement-6bb475821907a1f1_bg.wasm  reinforcement-7988eb8c09d7c610_bg.wasm  reinforcement-7defc15fc42a4177.js  reinforcement-7defc15fc42a4177_bg.wasm  reinforcement-804fdf708cfb8e9e.js  reinforcement-804fdf708cfb8e9e_bg.wasm  reinforcement-8255cd806ee19e2f.js  reinforcement-8255cd806ee19e2f_bg.wasm  reinforcement-8fca741b8906294.js  reinforcement-8fca741b8906294_bg.wasm  reinforcement-cbd33de58de3124b.js  reinforcement-cbd33de58de3124b_bg.wasm  reinforcement-d61d5bb26e6b7a16_bg.wasm  reinforcement-e6e5439dd26e6eb5_bg.wasm
src/: iced_main.rs  lib.rs  main.rs  network.rs  simulation.rs  training.rs  weights.rs
src/network/: activation.rs  layer.rs  layers.rs  reinforcement.rs
src/simulation/: acceleration.rs
src/training/: activations.rs  layer_matrix.rs  least_squar_value.rs  mlp.rs  ops.rs  optimizers.rs  policies.rs  tests.rs  trainer.rs
src/training/activations/: id.rs  relu.rs  tanh.rs
src/training/ops/: sub.rs
src/training/optimizers/: adam.rs  adamax.rs
(+1 files in other folders)
